--- a/c/index.html
+++ b/c/index.html
@@ -49,41 +49,9 @@
     </div>
   </section>
 
-  <!-- <div class="lazyLoad">
-  </div> -->
-  <div class="timer__box">
-    <div id="timer" class="timers">02:00</div>
+  <div class="lazyLoad">
   </div>
 
-
-  <div class="description">
-    <div class="description__container">
-
-      <h2 class="description__title"><span>BEPUL darsda</span> siz:</h2>
-      <div class="description__row">
-        <div class="description__col">
-          <h3 class="description__col-number">01</h3>
-          <p class="description__col-text">
-            Bola nega <span>shamollashini <br> asosiy sabablarini</span> bilib olasiz
-          </p>
-        </div>
-        <div class="description__col">
-          <h3 class="description__col-number">02</h3>
-          <p class="description__col-text">
-            Kuz-qishda bolani <span>shamollashdan</span> qanday <span>himoyalash</span> mumkin?
-          </p>
-        </div>
-        <div class="description__col">
-          <h3 class="description__col-number">03</h3>
-          <p class="description__col-text">
-            Immunitetni oshirish uchun <span>eng <br> muhim qoidalarni</span> qo’lga kiritasiz
-          </p>
-        </div>
-      </div>
-      <button class="mobile-cta-button registerBtn">RO’YXATDAN O’TISH >>></button>
-      <p class="mobile-text">Shoshiling, joylar oz qoldi!</p>
-    </div>
-  </div>
 
 
   <!-- Modal -->
@@ -130,17 +98,9 @@
 
 
   <script>
-    const img = document.querySelector(".speaker_img");
-    const bigSrc = img.getAttribute("data-src");
-
-    const highRes = new Image();
-    highRes.src = bigSrc;
-    highRes.onload = () => {
-      img.src = bigSrc;
-      img.classList.remove("blur-up");
-    };
+   const img = document.querySelector(".mobile-hero-image"); const bigSrc = img.getAttribute("data-src"); const highRes = new Image(); highRes.src = bigSrc; highRes.onload = () => { img.src = bigSrc; img.classList.remove("blur-up"); };
   </script>
-  <script defer src="../js/app.js"></script>
+  <script defer src="./js/app.js"></script>
 </body>
 
 </html>
